# abtop-web-ui

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  README.zh_CN.md  install.sh  renovate.json
.github/workflows/: ci.yml  release.yml
src/: deploy.rs  main.rs  monitor.rs  server.rs
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  prefs.tsx  styles.css  theme.ts  types.ts
web/src/components/: AnimatedNumber.tsx  ChildRow.tsx  ContextBar.tsx  GitBadge.tsx  HostHeader.tsx  McpPanel.tsx  Pill.tsx  PortsPanel.tsx  RateLimitPanel.tsx  SessionCard.tsx  SessionDetail.tsx  Sparkline.tsx  StatusDot.tsx
web/src/hooks/: useSnapshot.ts
web/src/lib/: format.ts
web/src/pages/: Dashboard.tsx  Login.tsx
