[package]
name = "abtop-web-ui"
version = "0.1.2"
edition = "2021"
rust-version = "1.88"
description = "Local-first web UI for the abtop AI-agent monitor"
license = "MIT"
repository = "https://github.com/XKHoshizora/abtop-web-ui"

[dependencies]
# Reuse abtop's data-collection layer in-process (no subprocess, no re-scan).
# Upstream library API (merged in graykode/abtop#133, first released in v0.4.8).
# Bump the tag to track new abtop releases. For hacking on abtop locally, swap in:
#   abtop = { path = "../abtop" }
abtop = { git = "https://github.com/graykode/abtop", tag = "v0.4.8" }
tiny_http = "0.12"
serde_json = "1"
# Embed the built SPA (web/dist) into the binary; run `pnpm build` in web/ first.
rust-embed = "8"
# Cryptographic randomness for session tokens.
getrandom = "0.2"
